# api/app/Http/Requests/LoginRequest.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Http\Request;
+use App\Http\Controllers\Controller;
+
+class LoginRequest extends Controller
+{
+    public function __construct(Request $request)
+    {
+        $this->validate(
+            $request,
+            [
+                'email' => 'required|email',
+                'password' => 'required',
+            ]
+        );
+
+        parent::__construct($request);
+    }
+}
