# api/routes/web.php
@@ -20,7 +20,6 @@ Route::get('/', function () use ($router) {
     return $router->app->version();
 });
 
-
 Route::get('/swagger', function () use ($router) {
     return redirect('/api/documentation');
 });
@@ -33,24 +32,36 @@ Route::post('/login', [
 
 Route::group(['middleware' => ['jwt']], function () {
 
-    Route::get('/cv', [
-        'as' => 'cv',
-        'uses' => 'ClientSide\PageController@getCv'
-    ]);
+
 
 });
 
+Route::get('/cv', [
+    'as' => 'cv',
+    'uses' => 'ClientSide\PageController@index'
+]);
+
 Route::get('/config', [
     'as' => 'config',
-    'uses' => 'ClientSide\ConfigController@getConfig'
+    'uses' => 'ClientSide\ConfigController@index'
 ]);
 
 Route::get('/projects', [
     'as' => 'projects',
-    'uses' => 'ClientSide\ProjectController@getProjects'
+    'uses' => 'ClientSide\ProjectController@index'
+]);
+
+Route::get('/projects/{id}', [
+    'as' => 'projects',
+    'uses' => 'ClientSide\ProjectController@show'
 ]);
 
 Route::get('/posts', [
     'as' => 'posts',
-    'uses' => 'ClientSide\PostController@getPosts'
+    'uses' => 'ClientSide\PostController@index'
+]);
+
+Route::get('/posts/{id}', [
+    'as' => 'posts',
+    'uses' => 'ClientSide\PostController@show'
 ]);
